<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Habit Tracker</string>

    <!-- Label for overflow menu option that inserts fake habit data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all habit data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Pets</string>

    <!-- Title for the activity to add a new habit [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_habit">Add a Habit</string>

    <!-- Label for editor menu option to save habit and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current habit [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="habit_overview">Overview</string>

    <!-- Label for target frequency information in the editor [CHAR LIMIT=30] -->
    <string name="target_frequency">Target Frequency</string>

    <!-- Label for achieved frequency in the editor [CHAR LIMIT=30] -->
    <string name="target_frequency_achieved">Target Frequency Achieved</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_habit_name">Habit</string>

    <!-- Text hint for start date field in the editor [CHAR LIMIT=30] -->
    <string name="hint_habit_start">Start Date</string>

    <!-- Text hint for stop date field in the editor [CHAR LIMIT=30] -->
    <string name="hint_habit_stop">Stop date</string>


    <!-- Labels for habit's target frequency dropdown menu option -->
    <string name="target_frequency_once_a_week">Once a week</string>
    <string name="target_frequency_twice_a_week">Twice a week</string>
    <string name="target_frequency_every_day">Every day</string>

    <!-- Labels for habit's achieved frequency dropdown menu option -->
    <string name="target_frequency_achieved_yes">Yes</string>
    <string name="target_frequency_achieved_no">No</string>
</resources>