<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/habit_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_habit_name"
                android:hint="@string/hint_habit_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Start date field -->
            <EditText
                android:id="@+id/edit_habit_start"
                android:hint="@string/hint_habit_start"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Stop date field -->
            <EditText
                android:id="@+id/edit_habit_stop"
                android:hint="@string/hint_habit_start"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>


    </LinearLayout>

    <!-- Target frequency category -->
    <LinearLayout
        android:id="@+id/container_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/target_frequency"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Target frequency drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_target"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- frequency achieved category -->
    <LinearLayout
        android:id="@+id/container_achieved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/target_frequency_achieved"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Achieved frequency drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_achieved"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
